# parks-canada-monitor

./: .env.example  .gitignore  README.md  config.example.yaml  issues.md  pyproject.toml  watchlist.example.yaml
docs/: auto-booking-plan.md
src/parks_monitor/: __main__.py  cli.py  client.py  config.py  monitor.py  notify.py  resolver.py  state.py
src/parks_monitor/data/: campsites.yaml
tests/: test_cli.py  test_client.py  test_config.py  test_integration.py  test_live_api.py  test_monitor.py  test_notify.py  test_resolver.py  test_state.py
tests/fixtures/: availability_map_banff_bc.json  daily_availability_banff_booked.json  daily_availability_jasper_available.json  maps_banff_bc.json  maps_jasper_bc.json  maps_waterton_bc.json  resource_locations.json
