[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parks-canada-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiosmtplib>=3.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
booking = ["playwright>=1.45"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
parks-monitor = "parks_monitor.cli:app"

[tool.pytest.ini_options]
markers = ["live: hits real Parks Canada API (deselect with -m 'not live')"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/parks_monitor"]

[tool.ruff]
target-version = "py311"
